# trace-model

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  repro-config  requirements.txt
.github/workflows/: idcc24.yml
demo/01-trov-vocab/: run.sh  run.txt
demo/01-trov-vocab/products/: img.gv  report_subclass.html
demo/02-tro-examples/01-two-artifacts-no-trp/: run.txt
demo/02-tro-examples/01-two-artifacts-no-trp/tro/: tro.jsonld
demo/02-tro-examples/01-two-artifacts-no-trp/trs/: trs.jsonld
demo/02-tro-examples/02-three-artifacts-one-trp/: run.txt
demo/02-tro-examples/02-three-artifacts-one-trp/tro/: tro.jsonld
demo/02-tro-examples/02-three-artifacts-one-trp/trs/: trs.jsonld
demo/02-tro-examples/03-skope-lbda-processing/: mappings.json  run.sh  run.txt  templates.geist
demo/02-tro-examples/03-skope-lbda-processing/products/: report.html
demo/02-tro-examples/03-skope-lbda-processing/tro/: tro.jsonld
demo/02-tro-examples/common/: query-tro.sh
demo/03-trace-explorations/01-gpg-runtime/01-generate-key/: run.sh  run.txt
demo/03-trace-explorations/03-tro-fingerprint-state/: run.sh  run.txt  test.py
demo/03-trace-explorations/04-timestamp/: run.sh  run.txt
demo/03-trace-explorations/05-validate-tro-declaration/: run.sh  run.txt
demo/03-trace-explorations/06-json2jsonld/: run.sh  run.txt
exports/: base-setup  trace-vocab.jsonld
src/trace_model/: tro_fingerprint_state.py
tests/: test_combined_loading.py  test_jsonld_loads.py  test_owl_inference.py  test_shacl_validation.py  test_sparql_queries.py
(+37 files in other folders)
