[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-model"
version = "0.0.1"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
tro_fingerprint_state = "trace_model.tro_fingerprint_state:cli"
merge_states = "trace_model.merge_states:cli"
